<resources>
    <string name="app_name">TrackMe</string>
    <string name="latitude_short">Lat:</string>
    <string name="longitude_short">Lon:</string>
    <string name="distance">Distance:</string>
    <string name="speed">Speed:</string>
    <string name="time">Time:</string>
    <string name="accuracy">Accuracy:</string>
    <string name="value_not_available_short">N/A</string>
    <string name="dialog_title_gps_provider_disabled">GPS Provider Disabled</string>
    <string name="dialog_body_gps_provider_disabled">GPS provider is disabled! 😞\nPlease enable it for location recording to work.</string>
    <string name="toast_gps_provider_enabled">GPS provider has been enabled 😃</string>
    <string name="toast_location_permissions_missing">Location permissions are necessary for location recording 😔</string>
    <string name="toast_location_recording_auto_restart">We have been killed while recording. Continuing automatically.</string>
    <string name="backlog">Backlog:</string>
    <string name="backlog_locations">Locations:</string>
    <string name="backlog_distance">Distance:</string>
    <string name="backlog_duration">Duration:</string>
    <string name="backlog_speed_avg">Avg speed:</string>
    <string name="backlog_speed_max">Max speed:</string>
    <string name="distance_unit_meters">m</string>
    <string name="distance_unit_kilometers">km</string>
    <string name="speed_unit_kilometers_per_hour">km/h</string>
    <string name="time_unit_days">d</string>

    <!-- toolbar and related dialogs -->
    <string name="action_start_tracking">Start tracking</string>
    <string name="action_stop_tracking">Stop tracking</string>
    <string name="action_add_single_location">Add single location</string>
    <string name="action_clear_all_locations">Clear locations</string>
    <string name="dialog_title_clear_all_locations">Clear All Locations</string>
    <string name="dialog_body_clear_all_locations">Do you really want to delete all locations? This cannot be undone!</string>
    <string name="action_settings">Settings</string>
    <string name="activity_title_settings">Settings</string>

    <!-- status bar notification -->
    <string name="notification_distance_short">dist</string>
    <string name="notification_speed_average_short">Speed avg</string>
    <string name="notification_speed_max_short">max</string>

    <!-- FTP upload login settings -->
    <string name="pref_upload_header">Upload</string>
    <string name="pref_upload_header_ftp_login">FTP Login</string>
    <string name="pref_upload_title_ftp_user_name">User name</string>
    <string name="pref_upload_summary_ftp_user_name">User name for login.</string>
    <string name="pref_upload_default_ftp_user_name">john_smith</string>
    <string name="pref_upload_title_ftp_password">Password</string>
    <string name="pref_upload_summary_ftp_password">Password for login.</string>
    <string name="pref_upload_default_ftp_password">asdf</string>
    <string name="pref_upload_title_ftp_server">Server</string>
    <string name="pref_upload_summary_ftp_server">Address of the FTP server.</string>
    <string name="pref_upload_default_ftp_server">interwebs.org</string>
    <string name="pref_upload_title_ftp_port">Port</string>
    <string name="pref_upload_summary_ftp_port">FTP Port.</string>
    <integer name="pref_upload_default_ftp_port">21</integer>

    <!-- FTP upload files settings -->
    <string name="pref_upload_header_ftp_files">FTP Files</string>
    <string name="pref_upload_title_ftp_dir">Directory</string>
    <string name="pref_upload_summary_ftp_dir">Relative or absolute path of the directory for the locations file.</string>
    <string name="pref_upload_default_ftp_dir">/trackme</string>
    <string name="pref_upload_title_ftp_filename">Filename</string>
    <string name="pref_upload_summary_ftp_filename">Name of the file to store the locations.</string>
    <string name="pref_upload_default_ftp_filename">locations.txt</string>

    <!-- FTP other settings -->
    <string name="pref_upload_header_other">Other</string>
    <string name="pref_upload_title_interval">Upload Interval</string>
    <string name="pref_upload_summary_interval">Upload interval in seconds. Use 0 to upload each new location.</string>
    <string name="pref_upload_default_interval">300</string>

    <!-- Location recording settings -->
    <string name="pref_recording_header">Location Recording</string>
    <string name="pref_recording_title_min_distance">Minimum distance</string>
    <string name="pref_recording_summary_min_distance">Minimum distance between location updates (in meters). Use 0 for considering duration only. For maximum power saving set this to 0 and use a duration only.</string>
    <string name="pref_recording_default_min_distance">0</string>
    <string name="pref_recording_title_min_time">Minimum duration</string>
    <string name="pref_recording_summary_min_time">Minimum duration between location updates (in seconds). Use 0 for considering distance only.</string>
    <string name="pref_recording_default_min_time">60</string>
    <string name="pref_recording_title_max_locations">Maximum locations</string>
    <string name="pref_recording_summary_max_locations">Maximum locations to store. Any additional location will lead to dropping the oldest one. Use 0 for no upper limit.</string>
    <string name="pref_recording_default_max_locations">500</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
