<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_start_stop_tracking"
        android:icon="@drawable/ic_my_location_white_24dp"
        android:title="@string/action_start_tracking"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_add_single_location"
        android:icon="@drawable/ic_my_location_single_white_24px"
        android:title="@string/action_add_single_location"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_clear_all_locations"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/action_clear_all_locations"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />

</menu>